get the rest of the legacy material added

--- a/about/abouttao/index.html
+++ b/about/abouttao/index.html
@@ -4,6 +4,7 @@ title: TAO Product Information
 categories: [ocitao]
 tags: []
 order: 20
+redirect_from: /about/abouttao.html
 ---
 
 <div id="contenttext">
