--- a/downloads.html
+++ b/downloads.html
@@ -1,9 +1,9 @@
 ---
 layout: page
-title: Download
+title: Downloads
 categories: [ocitao]
 tags: []
-order: 97
+order: 40
 ---
 <div id="contenttext">
   <div class="bodytext" align="justify">
@@ -31,7 +31,7 @@ order: 97
       {% endif %}
 
     <span class="headertext">Previous Releases</span>
-    <p style="text-align: left;">Previous releases are available in the previous releases section of the OpenDDS download site: <a href="http://download.ociweb.com/OpenDDS/previous-releases/">http://download.ociweb.com/OpenDDS/previous-releases/</a> or on the <a href="{{site.github.releases_url}}">GitHub releases page</a>. </p>
+    <p style="text-align: left;">Previous releases are available via the <a href="http://localhost:9090/product/3">OCI Download Portal</a> or on the <a href="{{site.github.releases_url}}">GitHub releases page</a>. </p>
 
     <span class="headertext">Support</span>
     <p>See <a href="support.html">the OpenDDS support page</a> for support options.</p>
