bring-over of the rest of theaceorb.com files

--- a/downloads/index.html
+++ b/downloads/index.html
@@ -1,9 +1,9 @@
 ---
 layout: page
-title: Downloads
+title: Download links
 categories: [ocitao]
 tags: []
-order: 40
+order: 30
 ---
 <div id="contenttext">
   <div class="bodytext" align="justify">
