fix image links

--- a/partners.html
+++ b/partners.html
@@ -14,7 +14,7 @@ categories: [ocitao]
 <p>The following list illustrates OCI's commitment to working with quality partners.</p>
 <table cellpadding="10" border="0"><tbody><tr><td width="220" valign="middle" align="center">
     <a href="http://www.sun.com/developers/index.html" target="_blank">
-<img src="/images/part_advan_mark_orblu_digital1.jpg" border="0" alt="tpl-iforce-4c_sun-small.png" />
+<img src="{{site.baseurl}}/images/part_advan_mark_orblu_digital1.jpg" border="0" alt="tpl-iforce-4c_sun-small.png" />
 </a>
 </td>
 <td width="250">OCI provides its users of TAO with superior support through its membership of Sun's Embedded
@@ -26,7 +26,7 @@ categories: [ocitao]
 </td>
 </tr>
 <tr><td width="220" valign="middle" align="center"><a href="http://www.lynuxworks.com/" target="_blank">
-<img src="/images/LWcolor.gif" border="0" />
+<img src="{{site.baseurl}}/images/LWcolor.gif" border="0" />
 </a>
 </td>
 <td width="250">OCI is a proud member of the<br />LynuxWorks Synergy partner program.<br />
@@ -35,7 +35,7 @@ categories: [ocitao]
 </td>
 </tr>
 <tr><td width="220" valign="middle" align="center"><a href="http://www.wrs.com/" target="_blank">
-<img src="/images/a_Wlcolor.gif" border="0" />
+<img src="{{site.baseurl}}/images/a_Wlcolor.gif" border="0" />
 </a>
 </td>
 <td width="250">OCI is a WindRiver partner supporting<br />VxWorks RTOS with both their Tornado and Eclipse
@@ -46,14 +46,14 @@ categories: [ocitao]
 <td width="250"> </td>
 </tr>
 <tr><td width="220" valign="middle" align="center"><a href="http://www.microsoft.com/windows/embedded/" target="_blank">
-<img src="/images/ms_emb_logo.gif" border="0" />
+<img src="{{site.baseurl}}/images/ms_emb_logo.gif" border="0" />
 </a>
 </td>
 <td width="250">OCI spans Windows platforms with CORBA solutions. <br />
 <a href="http://www.microsoft.com/windows/embedded/" target="_blank">www.microsoft.com/windows/embedded</a> </td>
 </tr>
 <tr><td width="220" valign="middle" align="center"><a href="http://www.sgi.com/" target="_blank">
-<img src="/images/sgi_logo.gif" border="0" />
+<img src="{{site.baseurl}}/images/sgi_logo.gif" border="0" />
 </a>
 </td>
 <td width="250">TAO and ACE is available on the SGI platforms as part of our partnership with the high performance
@@ -61,7 +61,7 @@ categories: [ocitao]
 <a href="http://www.sgi.com/" target="_blank">www.sgi.com</a> </td>
 </tr>
 <tr><td width="220" valign="middle" align="center"><a href="http://www.ghs.com/" target="_blank">
-<img src="/images/ghs_logo.gif" border="0" />
+<img src="{{site.baseurl}}/images/ghs_logo.gif" border="0" />
 </a>
 </td>
 <td width="250">OCI is a member of the GreenHills Total Solutions Partners program and employs the quality "MULTI"
@@ -69,7 +69,7 @@ categories: [ocitao]
 <a href="http://www.ghs.com/" target="_blank">www.ghs.com</a> </td>
 </tr>
 <tr><td width="220" valign="middle" align="center"><a href="http://www.mcobject.com/" target="_blank">
-<img src="/images/mcobject_logo.jpg" border="0" />
+<img src="{{site.baseurl}}/images/mcobject_logo.jpg" border="0" />
 </a>
 </td>
 <td width="250">OCI has used its expertise with
@@ -81,7 +81,7 @@ categories: [ocitao]
 <a href="http://www.mcobject.com/" target="_blank">www.mcobject.com</a> </td>
 </tr>
 <tr><td width="220" valign="middle" align="center"><a href="http://www.29west.com/" target="_blank">
-<img src="/images/29west.jpg" border="0" alt="29west" />
+<img src="{{site.baseurl}}/images/29west.jpg" border="0" alt="29west" />
 </a>
 </td>
 <td width="250">OCI has extensive expertise at developing high performance, reliable, market-data
@@ -90,7 +90,7 @@ categories: [ocitao]
     systems without compromising quality, reliability, or performance. <a href="http://www.29west.com/" target="_blank">
         www.29west.com</a> </td>
 </tr>
-<tr><td width="220" valign="middle" align="center"><img width="120" height="50" src="/images/qnxlogo.gif" />
+<tr><td width="220" valign="middle" align="center"><img width="120" height="50" src="{{site.baseurl}}/images/qnxlogo.gif" />
 </td>
 <td width="250">OCI is pleased to host ACE/TAO in the QNX RTOS, one of the most widely used embedded OSs in the
     industry.<br />
