--- a/support/training.html
+++ b/support/training.html
@@ -16,7 +16,7 @@ categories: [ocitao]
 <h4>Curricula Map</h4>
 <p>Click on any box to see a course description. The position of the boxes is an indication of their relative intensity, from top of the page to the bottom, and left to right.</p>
 
-<p><img src="/images/acetaoTrainingMap.gif" border="0" width="649" usemap="#FPMap0" height="497" />
+<p><img src="{{site.baseurl}}/images/acetaoTrainingMap.gif" border="0" width="649" usemap="#FPMap0" height="497" />
 </p>
 
 <map name="FPMap0">
