--- a/releasenotes/1.4a/OCIReleaseNotes.html
+++ b/releasenotes/1.4a/OCIReleaseNotes.html
@@ -96,7 +96,7 @@
                         own projects as well. MPC will generate GNU make files, Windows project files
                         for both VC++ 6 and 7.1, Borland make files, and others. It can be extended to
                         other make systems as well. MPC documentation is available in the distribution
-                        at <CODE>ACE_wrappers/bin/MakeProjectCreator/README</CODE> or in OCI's <A HREF="http://www.theaceorb.com/product/index.html">
+                        at <CODE>ACE_wrappers/bin/MakeProjectCreator/README</CODE> or in OCI's <A HREF="{{site.baseurl}}/product/index.html">
                            TAO Developer's Guide, Version 1.4a</A>, which will be available separately.
                         This chapter can be viewed from <A HREF="http://downloads.ociweb.com/MPC">http://downloads.ociweb.com/MPC</A>
                         in html or downloaded in PDF form.
@@ -142,7 +142,7 @@
             <TD>
                <P>Many important new features and bug fixes have been introduced in TAO 1.4a.
                   They are described briefly here. These and many other features of TAO 1.4a are
-                  detailed in OCI's <A HREF="http://www.theaceorb.com/product/index.html">TAO
+                  detailed in OCI's <A HREF="{{site.baseurl}}/product/index.html">TAO
                      Developer's Guide, Version 1.4a</A>, which will be available separately.
                </P>
                <P>
@@ -189,7 +189,7 @@
                        <LI>
                          Added global operator< definition for TAO_String_Manager to support string type key comparison in OpenDDS.
                        </LI>
-                       <LI>Made TAO_IDL always compare full path instead of preprocessor generated path to avoid preprocessor dependency. (RT 12461)           
+                       <LI>Made TAO_IDL always compare full path instead of preprocessor generated path to avoid preprocessor dependency. (RT 12461)
                        </LI>
                        <LI>Fixed memory leaks in the SSLIOP implementation. (DOC bug 3165)
                        </LI>
@@ -229,9 +229,9 @@
                        <LI>
                          Added support for VxWorks 6.3 and VxWorks 6.4.
                        <LI>
-                         Added ACE_Stack_Trace class to allow users to obtain a stack trace within 
+                         Added ACE_Stack_Trace class to allow users to obtain a stack trace within
                          their application on supported platforms. A new conversion character, the
-                         question mark, was added to ACE_Log_Msg for stack trace logging. 
+                         question mark, was added to ACE_Log_Msg for stack trace logging.
                        </LI>
                      </UL>
                   </LI>
