--- a/support/announcements/1.3a-announcement.html
+++ b/support/announcements/1.3a-announcement.html
@@ -37,9 +37,9 @@ TAO 1.3a includes many new features and improvements over the previous commercia
   </li>
 </ul>
 
-<p>TAO 1.3a is available for immediate download, in source-code form, from <a href="/">http://www.theaceorb.com</a>.  Binaries are available on commonly used platforms.  These will enable you to get going quickly. They may be ordered by going to <a href="/purchase/index.html">http://www.theaceorb.com/purchase/</a>.</p>
+<p>TAO 1.3a is available for immediate download, in source-code form, from <a href="/">{{site.baseurl}}</a>.  Binaries are available on commonly used platforms.  These will enable you to get going quickly. They may be ordered by going to <a href="/purchase/index.html">{{site.baseurl}}/purchase/</a>.</p>
 
-<p>The new, expanded, two volume edition of the TAO Developers Guide may also be order at the same location.  The table of contents, index, some sample chapters etc. which will also help you get going, may be downloaded in a PDF version from <a href="/downloads/index.html">http://www.theaceorb.com/downloads/</a>.</p>
+<p>The new, expanded, two volume edition of the TAO Developers Guide may also be order at the same location.  The table of contents, index, some sample chapters etc. which will also help you get going, may be downloaded in a PDF version from <a href="/downloads/index.html">{{site.baseurl}}/downloads/</a>.</p>
 
 
 <p align="center"><a href="/downloads/index.html#1.3a">Downloads for TAO 1.3a</a></p>
