--- a/support/announcements/1.4a-announcement.html
+++ b/support/announcements/1.4a-announcement.html
@@ -23,7 +23,7 @@ categories: [ocitao]
   <li>AMH support is improved.</li>
 </ul>
 
-<p>TAO 1.4a is available for immediate download, in source-code form, from <a href="/">http://www.theaceorb.com</a>.
+<p>TAO 1.4a is available for immediate download, in source-code form, from <a href="/">{{site.baseurl}}</a>.
 The new, expanded edition of the TAO Developers Guide is currently under development.</p>
 
 
