--- a/support/announcements/1.6a-announcement.html
+++ b/support/announcements/1.6a-announcement.html
@@ -92,7 +92,7 @@ allow setting of the default filter operators. </li></ul>
                          Round trip timeouts are now honored consistently.
                        </li><li>
                          A number of IDL compiler defects have been fixed, many in areas related to valuetypes and typedefs.
-                     </li></ul><br /><p>TAO 1.6a is available for immediate download, in source-code form, from <a href="/"><font color="#660000">http://www.theaceorb.com</font></a>. The new, updateded edition of the TAO Developer's Guide is currently under development.</p>
+                     </li></ul><br /><p>TAO 1.6a is available for immediate download, in source-code form, from <a href="/"><font color="#660000">{{site.baseurl}}</font></a>. The new, updateded edition of the TAO Developer's Guide is currently under development.</p>
 <p align="center"><a href="/downloads/1.6a/index.html" target="_self"><font color="#660000" /></a><font color="#660000"><a target="_self">Downloads for TAO 1.6a</a></font></p>
 <p align="center"><font color="#660000">All Patches for TAO 1.6a (none at this
 time)</font></p>
