--- a/releasenotes/1.1a/releasenotes/index.html
+++ b/releasenotes/1.1a/releasenotes/index.html
@@ -32,7 +32,7 @@
 	  These release notes are current as of TAO 1.1a (which corresponds to OCI part
 	  number 021-01).  The latest version of these release notes
 	  can be viewed or downloaded from OCI's web site at <a
-	  href="http://www.theaceorb.com/releasenotes">http://www.theaceorb.com/releasenotes</a>.
+	  href="{{site.baseurl}}/releasenotes">{{site.baseurl}}/releasenotes</a>.
 	</td>
       </tr>
     </table>
@@ -72,7 +72,7 @@
         </ol>
       <li><a href="#sample_app">Sample Application</a>
     </ol>
-	
+
     <hr width="50%">
 
     <ol type="1">
@@ -85,7 +85,7 @@
 	      TAO 1.1a derives from the DOC 1.1.4 beta kit with bugfix-related patches
 	      selectively applied to enhance stability.  A record of applied patches can
 	      be found in <a
-	      href="http://www.theaceorb.com/11a/changelog/OCIChangeLog">OCIChangeLog</a> files
+	      href="{{site.baseurl}}/11a/changelog/OCIChangeLog">OCIChangeLog</a> files
 	      installed with the distribution.  At the time of this release, the current
 	      DOC beta kit is 1.1.10.
 	    <p>
@@ -116,7 +116,7 @@
               To install a Windows build of TAO 1.1a from CD, run
               setup on a Windows platform.  Likewise, to install for
               a UNIX or UNIX-like platform, run setup on a UNIX or
-              UNIX-like platform. 
+              UNIX-like platform.
 	    <p>
 
           <li class="l2"><a name="event_svc_clarification"></a><span class="l2">Clarification of Event Service Installation Nomenclature</span></li>
@@ -175,8 +175,8 @@
 	</ol>
 
 	Details on these, and many other features of TAO 1.1a, are detailed in <a
-	href="http://www.theaceorb.com/product/index.html#doc">OCI's TAO Developer's 
-    Guide</a>, available separately. 
+	href="{{site.baseurl}}/product/index.html#doc">OCI's TAO Developer's
+    Guide</a>, available separately.
     <p>
       <li class="l1"><a name="platform_notes"></a><span class="l1">Platform-specific Notes</span>
         <p>
@@ -206,7 +206,7 @@
                 Workshop 5.1/Forte is new, uncharted territory, and
                 template instantiation rears its ugly head once again.
               </dd>
-            <p>              
+            <p>
 
               <dt><span class="l3">Sun Workshop 5.0 and 5.1/Forte oddities</span></dt>
               <p>
@@ -314,13 +314,13 @@ The automated tests included with TAO do not fully support this platform and thi
 
       <li class="l1"><a name="building_apps"></a><span class="l1">Quickstart for Building with TAO</span>
 
-	<p> This section contains a few things you will need to know to build applications 
-      which use the TAO and ACE libraries distributed on this CD. You can find 
-      more detailed information in <a href="bldgapps.html">bldgapps.html</a>, 
+	<p> This section contains a few things you will need to know to build applications
+      which use the TAO and ACE libraries distributed on this CD. You can find
+      more detailed information in <a href="bldgapps.html">bldgapps.html</a>,
       adapted from the <a
-	  href="http://www.theaceorb.com/product/index.html"><em>TAO Developer's Guide</em> 
+	  href="{{site.baseurl}}/product/index.html"><em>TAO Developer's Guide</em>
       (OCI part number 510-01)</a>, <a
-	  href="https://ssl.ociweb.com/buy/index.html">available for purchase online</a>. 
+	  href="https://ssl.ociweb.com/buy/index.html">available for purchase online</a>.
     <p>
 
         <ol type="a">
